Styling deleted items

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   background-color: #c0c5d7;
 
   --font-color: #2b3864;
+  --done-font-color: #c0c5d7;
   --card-color: #ffffff;
   --button-color: #2b3864;
   --button-font-color: #ffffff;
