--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 }
 
 .list__cont {
-  min-height: 200px;
+  height: 200px;
   padding-bottom: 4rem;
 
   border-bottom: 1px solid var(--border-color);
@@ -45,11 +45,34 @@
 }
 
 .list__cont:nth-child(2) {
-  padding-top: 4rem;
+  margin-top: 4rem;
 }
 
 .list__title {
   font-size: 2.2rem;
+}
+
+.list__box {
+  width: 100%;
+  height: 100%;
+
+  padding-left: 2rem;
+
+  overflow-y: scroll;
+}
+
+.list__item {
+  font-size: 1.8rem;
+  color: var(--font-color);
+
+  width: fit-content;
+
+  cursor: pointer;
+}
+
+.done__item {
+  text-decoration: line-through;
+  color: var(--done-font-color);
 }
 
 .action__cont {
